--- a/.github/workflows/sync-repositories.yml
+++ b/.github/workflows/sync-repositories.yml
@@ -114,8 +114,9 @@ jobs:
         cd backend-repo
         
         # 清空现有内容（除了 .git）
-        find . -mindepth 1 -name '.git' -prune -o -type f -delete
-        find . -mindepth 1 -name '.git' -prune -o -type d -empty -delete
+      shopt -s extglob
+      rm -rf !(".git")
+      shopt -u extglob
         
         # 复制新内容
         cp -r ../backend/* . 2>/dev/null || true
