--- a/.github/workflows/sync-repositories.yml
+++ b/.github/workflows/sync-repositories.yml
@@ -76,19 +76,16 @@ jobs:
         FRONTEND_TOKEN: ${{ secrets.FRONTEND_REPO_TOKEN }}
       run: |
         echo "Syncing frontend changes..."
-        
         # 克隆 frontend 仓库
         git clone https://x-access-token:${FRONTEND_TOKEN}@github.com/carbon-track/frontend.git frontend-repo
         cd frontend-repo
-        
         # 清空现有内容（除了 .git）
-        find . -mindepth 1 -name '.git' -prune -o -type f -delete
-        find . -mindepth 1 -name '.git' -prune -o -type d -empty -delete
-        
+        shopt -s extglob
+        rm -rf !(".git")
+        shopt -u extglob
         # 复制新内容
         cp -r ../frontend/* . 2>/dev/null || true
         cp -r ../frontend/.* . 2>/dev/null || true
-        
         # 检查是否有变更
         if ! git diff --quiet; then
           git add .
@@ -98,7 +95,6 @@ jobs:
         else
           echo "No changes to commit in frontend repository"
         fi
-        
         cd ..
         rm -rf frontend-repo
 
