feat: add BadgeRecipientsDialog component for managing badge recipients

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -29,6 +29,9 @@ MAIL_PORT=587
 MAIL_USERNAME=your-email@gmail.com
 MAIL_PASSWORD=your-app-password
 MAIL_ENCRYPTION=tls
+
+MAIL_SIMULATE=false
+MAIL_SMTP_DEBUG=0
 MAIL_FROM_ADDRESS=your-email@gmail.com
 MAIL_FROM_NAME="CarbonTrack"
 
