--- a/backend/composer.json
+++ b/backend/composer.json
@@ -4,22 +4,23 @@
     "type": "project",
     "require": {
         "php": ">=7.4",
-        "slim/slim": "^4.0",
-        "slim/psr7": "^1.0",
+        "aws/aws-sdk-php": "^3.0",
+        "firebase/php-jwt": "^6.0",
+        "illuminate/database": "^8.0",
+        "illuminate/events": "^8.0",
+        "monolog/monolog": "^2.0",
+        "php-di/php-di": "^6.0",
+        "phpmailer/phpmailer": "^6.10",
+        "psr/container": "^1.0",
         "psr/http-message": "^1.0",
         "psr/http-server-handler": "^1.0",
         "psr/http-server-middleware": "^1.0",
-        "psr/container": "^1.0",
-        "php-di/php-di": "^6.0",
-        "monolog/monolog": "^2.0",
-        "firebase/php-jwt": "^6.0",
-        "aws/aws-sdk-php": "^3.0",
-        "vlucas/phpdotenv": "^5.0",
-        "illuminate/database": "^8.0",
-        "illuminate/events": "^8.0",
         "respect/validation": "^2.0",
+        "selective/basepath": "^2.0",
+        "slim/psr7": "^1.0",
+        "slim/slim": "^4.0",
         "tuupola/cors-middleware": "^1.0",
-        "selective/basepath": "^2.0"
+        "vlucas/phpdotenv": "^5.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0",
@@ -46,4 +47,3 @@
     "minimum-stability": "stable",
     "prefer-stable": true
 }
-
