feat: 添加邮箱验证与密码重置支持（API、控制器、邮件、DB、测试）
- 在 users 表新增邮箱验证与重置相关字段（reset_token, reset_token_expires_at, email_verified_at, verification_code, verification_token, verification_code_expires_at, verification_attempts, verification_send_count, verification_last_sent_at），并添加迁移脚本
- 在 AuthController 中实现 sendVerificationCode 与 verifyEmail 接口及配套私有方法（节流策略、生成/派发挑战、标记已验证、尝试计数等）
- EmailService 增强：从磁盘安全加载模板并新增 sendVerificationCode（支持验证码、过期时间与验证链接占位符）
- 更新邮件模板（verification_code.html / .txt）：展示验证码、验证按钮与验证链接
- 更新 OpenAPI 文档：说明 send-verification-code 与 verify-email 的请求/响应、错误码与新增字段
- 更新各处返回数据以包含 email_verified_at，保持向后兼容
- 更新测试与测试辅助：扩展 SQLite 测试 schema、调整/新增单元与集成测试（包含 AuthEmailVerificationTest）
- 更新 .env.example，添加 EMAIL_VERIFICATION_TTL_MINUTES 环境变量示例

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -30,8 +30,11 @@ MAIL_USERNAME=your-email@gmail.com
 MAIL_PASSWORD=your-app-password
 MAIL_ENCRYPTION=tls
 
-MAIL_SIMULATE=false
+MAIL_SIMULATE=false
+
 MAIL_SMTP_DEBUG=0
+
+EMAIL_VERIFICATION_TTL_MINUTES=30
 MAIL_FROM_ADDRESS=your-email@gmail.com
 MAIL_FROM_NAME="CarbonTrack"
 
