feat(message/email,docs,tests,job): 从环境优先读取邮件/应用标识、统一按钮色并改为批量插入管理员通知
- EmailService: 移除硬编码身份字段，优先从 $_ENV (MAIL_FROM_ADDRESS, MAIL_FROM_NAME, APP_NAME, SUPPORT_EMAIL, FRONTEND_URL) 获取配置，回退到 config 与合理默认；初始化逻辑更清晰；统一使用 DEFAULT_BUTTON_COLOR 作为邮件按钮颜色常量。
- MessageService: 将管理员通知改为构建行数组并批量 insert（persistSystemMessagesBulk），记录插入耗时并在失败时降级为逐条创建；新增 TYPES_WITH_DEDICATED_EMAIL 与 shouldSuppressLinkedEmail 来抑制对已有专用邮件类型的重复链接邮件（如 product_exchanged、exchange_status_updated）；调整 maybeSendLinkedEmail/sendBulkLinkedEmail 的调用点以应用抑制逻辑。
- EmailJobRunner: 清理重复/混乱的 PHPDoc 注释，整理方法注释。
- README & .env.example: 补充/调整邮件与应用标识相关环境变量说明及示例顺序（支持 SUPPORT_EMAIL / APP_NAME）。
- tests: 更新单元测试期望以匹配批量插入与抑制邮件的行为（ProductControllerTest 与 MessageServiceTest 调整）。

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -37,8 +37,10 @@ MAIL_SMTP_DEBUG=0
 EMAIL_VERIFICATION_TTL_MINUTES=30
 MAIL_FROM_ADDRESS=your-email@gmail.com
 MAIL_FROM_NAME="CarbonTrack"
+SUPPORT_EMAIL=support@carbontrackapp.com
 
 # Application Configuration
+APP_NAME=CarbonTrack
 APP_ENV=development
 APP_DEBUG=true
 APP_URL=http://localhost:8080
