feat(ai,backend,frontend,openapi,tests,docs,composer): 添加管理员 AI 指令解析与执行能力
- 后端：新增 AdminAiIntentService、AdminAiController、Ai/OpenAiClientAdapter、Ai/LlmClientInterface；在依赖注入中注册 LLM 客户端与服务；新增路由 /admin/ai/intents；更新 .env.example（LLM 配置）并引入 openai-php 客户端依赖（composer.json/lock）。
- 前端：在 AdminLayout 集成 AI 命令面板，新增命令输入、Debounce 查询、react-query 调用 adminAPI.analyzeCommand 并实现意图选择/执行与错误提示；更新 api 封装。
- 文档与 OpenAPI：扩展 openapi.json，新增 AI 接口与相关 schema；更新 draft.md 与 functional_test_plan.md，补充 AI 场景与测试点。
- 测试：新增单元测试覆盖 AdminAiController 与 AdminAiIntentService。

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -39,6 +39,14 @@ MAIL_FROM_ADDRESS=your-email@gmail.com
 MAIL_FROM_NAME="CarbonTrack"
 SUPPORT_EMAIL=support@carbontrackapp.com
 
+# AI Assistant (OpenAI-compatible)
+LLM_API_KEY=
+LLM_API_BASE_URL=https://api.openai.com/v1
+LLM_API_MODEL=gpt-4o-mini
+LLM_API_TEMPERATURE=0.2
+LLM_API_MAX_TOKENS=800
+LLM_API_ORG=
+
 # Application Configuration
 APP_NAME=CarbonTrack
 APP_ENV=development
