feat(ai,backend,config,tests): 将管理员 AI 指令配置外置并通过 DI 加载
- 重构 AdminAiIntentService：移除类内硬编码的常量，改为支持通过构造函数注入命令配置（navigationTargets / quickActions / managementActions），并新增索引化与默认配置加载逻辑
- 添加默认命令提供者：新增 config/admin_ai_commands.php 作为默认命令定义
- 在依赖注入中新增 admin.ai.commands 服务：从 ADMIN_AI_COMMANDS_PATH 环境变量或默认路径加载可读的配置文件（支持绝对/相对路径），加载失败返回 null
- 将 admin.ai.commands 注入到 AdminAiIntentService 构造器
- 增加测试 coverage：更新/新增单元测试以验证自定义配置覆盖默认配置
- 更新 .env.example：添加 ADMIN_AI_COMMANDS_PATH 配置项，支持指定自定义命令文件路径

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -46,6 +46,7 @@ LLM_API_MODEL=gpt-4o-mini
 LLM_API_TEMPERATURE=0.2
 LLM_API_MAX_TOKENS=800
 LLM_API_ORG=
+ADMIN_AI_COMMANDS_PATH=
 
 # Application Configuration
 APP_NAME=CarbonTrack
