--- a/backend/composer.json
+++ b/backend/composer.json
@@ -6,6 +6,9 @@
         "php": ">=7.4",
         "aws/aws-sdk-php": "^3.0",
         "firebase/php-jwt": "^6.0",
+        "guzzlehttp/guzzle": "7.10",
+        "guzzlehttp/psr7": "2.8",
+        "http-interop/http-factory-guzzle": "1.2",
         "illuminate/database": "^8.0",
         "illuminate/events": "^8.0",
         "monolog/monolog": "^2.0",
