chore(workflow): make monorepo->repo sync steps resilient to remote updates (retries + force-with-lease)

--- a/.github/workflows/sync-repositories.yml
+++ b/.github/workflows/sync-repositories.yml
@@ -79,22 +79,67 @@ jobs:
         # 克隆 frontend 仓库
         git clone https://x-access-token:${FRONTEND_TOKEN}@github.com/carbon-track/frontend.git frontend-repo
         cd frontend-repo
+
+        # 确保 main 是最新的基底
+        git fetch origin main --depth=1
+        git checkout -B main origin/main
+
         # 清空现有内容（除了 .git）
         shopt -s extglob
         rm -rf !(".git")
         shopt -u extglob
-        # 复制新内容
+
+        # 复制新内容（包括隐藏文件）
         cp -r ../frontend/* . 2>/dev/null || true
-        cp -r ../frontend/.* . 2>/dev/null || true
-        # 检查是否有变更
-        if ! git diff --quiet; then
-          git add .
-          git commit -m "sync: update from monorepo (${GITHUB_SHA::7})"
-          git push origin main
-          echo "Frontend repository updated successfully"
-        else
+        cp -r ../frontend/.[!.]* . 2>/dev/null || true
+
+        # 配置提交者信息（CI 环境）
+        git config user.name "github-actions[bot]"
+        git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+
+        # 如果没有变化则退出
+        if git diff --quiet --exit-code && git diff --staged --quiet --exit-code; then
           echo "No changes to commit in frontend repository"
+          cd ..
+          rm -rf frontend-repo
+          exit 0
         fi
+
+        # 添加并提交变更（允许在无差异时忽略错误）
+        git add -A
+        git commit -m "sync: update from monorepo (${GITHUB_SHA::7})" || true
+
+        # 推送带重试（优先正常 push，失败时尝试安全强制推送）
+        MAX_ATTEMPTS=5
+        attempt=0
+        while [ $attempt -lt $MAX_ATTEMPTS ]; do
+          echo "Attempt $((attempt+1)) to push..."
+          if git push origin main; then
+            echo "Frontend repository updated successfully"
+            break
+          fi
+
+          echo "Push failed; fetching latest origin/main and reapplying changes..."
+          attempt=$((attempt+1))
+          git fetch origin main
+          git reset --soft origin/main
+          git commit -m "sync: update from monorepo (${GITHUB_SHA::7})" || true
+
+          if git push --force-with-lease origin main; then
+            echo "Pushed successfully with force-with-lease"
+            break
+          fi
+
+          sleep $((attempt * 2))
+        done
+
+        if [ $attempt -ge $MAX_ATTEMPTS ]; then
+          echo "Failed to push to frontend repository after ${MAX_ATTEMPTS} attempts"
+          cd ..
+          rm -rf frontend-repo
+          exit 1
+        fi
+
         cd ..
         rm -rf frontend-repo
 
@@ -107,22 +152,67 @@ jobs:
         # 克隆 backend 仓库
         git clone https://x-access-token:${BACKEND_TOKEN}@github.com/carbon-track/backend.git backend-repo
         cd backend-repo
+
+        # 确保 main 是最新的基底
+        git fetch origin main --depth=1
+        git checkout -B main origin/main
+
         # 清空现有内容（除了 .git）
         shopt -s extglob
         rm -rf !(".git")
         shopt -u extglob
-        # 复制新内容
+
+        # 复制新内容（包括隐藏文件）
         cp -r ../backend/* . 2>/dev/null || true
-        cp -r ../backend/.* . 2>/dev/null || true
-        # 检查是否有变更
-        if ! git diff --quiet; then
-          git add .
-          git commit -m "sync: update from monorepo (${GITHUB_SHA::7})"
-          git push origin main
-          echo "Backend repository updated successfully"
-        else
+        cp -r ../backend/.[!.]* . 2>/dev/null || true
+
+        # 配置提交者信息（CI 环境）
+        git config user.name "github-actions[bot]"
+        git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+
+        # 如果没有变化则退出
+        if git diff --quiet --exit-code && git diff --staged --quiet --exit-code; then
           echo "No changes to commit in backend repository"
+          cd ..
+          rm -rf backend-repo
+          exit 0
         fi
+
+        # 添加并提交变更（允许在无差异时忽略错误）
+        git add -A
+        git commit -m "sync: update from monorepo (${GITHUB_SHA::7})" || true
+
+        # 推送带重试（优先正常 push，失败时尝试安全强制推送）
+        MAX_ATTEMPTS=5
+        attempt=0
+        while [ $attempt -lt $MAX_ATTEMPTS ]; do
+          echo "Attempt $((attempt+1)) to push..."
+          if git push origin main; then
+            echo "Backend repository updated successfully"
+            break
+          fi
+
+          echo "Push failed; fetching latest origin/main and reapplying changes..."
+          attempt=$((attempt+1))
+          git fetch origin main
+          git reset --soft origin/main
+          git commit -m "sync: update from monorepo (${GITHUB_SHA::7})" || true
+
+          if git push --force-with-lease origin main; then
+            echo "Pushed successfully with force-with-lease"
+            break
+          fi
+
+          sleep $((attempt * 2))
+        done
+
+        if [ $attempt -ge $MAX_ATTEMPTS ]; then
+          echo "Failed to push to backend repository after ${MAX_ATTEMPTS} attempts"
+          cd ..
+          rm -rf backend-repo
+          exit 1
+        fi
+
         cd ..
         rm -rf backend-repo
 
