--- a/backend/.github/workflows/ci.yml
+++ b/backend/.github/workflows/ci.yml
@@ -1,77 +1,64 @@
+(# Backend CI for target repo - installs PHP & composer, runs phpunit and optional static analysis)
 name: Backend CI
 
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+	push:
+		branches: [ main ]
+	pull_request:
+		branches: [ main ]
 
 jobs:
-  install-deps:
-    name: backend:install-deps
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+	install-deps:
+		name: backend:install-deps
+		runs-on: ubuntu-latest
+		steps:
+			- name: Checkout
+				uses: actions/checkout@v4
 
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v4
-        with:
-          php-version: '8.1'
-          extensions: mbstring, json
-          coverage: none
+			- name: Install system dependencies
+				run: |
+					sudo apt-get update
+					sudo apt-get install -y php-cli unzip git curl
 
-      - name: Get composer
-        run: |
-          curl -sS https://getcomposer.org/installer | php
-          sudo mv composer.phar /usr/local/bin/composer
+			- name: Install Composer
+				run: |
+					curl -sS https://getcomposer.org/installer | php
+					sudo mv composer.phar /usr/local/bin/composer
 
-      - name: Cache composer
-        uses: actions/cache@v4
-        with:
-          path: ~/.composer/cache
-          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.json') }}
+			- name: Install PHP dependencies
+				run: |
+					composer install --no-interaction --prefer-dist || true
 
-      - name: Install dependencies
-        run: |
-          composer install --no-interaction --prefer-dist
+	phpunit:
+		name: backend:phpunit
+		runs-on: ubuntu-latest
+		needs: install-deps
+		steps:
+			- name: Checkout
+				uses: actions/checkout@v4
 
-  phpunit:
-    name: backend:phpunit
-    runs-on: ubuntu-latest
-    needs: install-deps
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+			- name: Run phpunit
+				run: |
+					if [ -f vendor/bin/phpunit ]; then
+						vendor/bin/phpunit || true
+					else
+						echo "phpunit binary not found; attempting global phpunit or composer test"
+						composer test || true
+					fi
 
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v4
-        with:
-          php-version: '8.1'
+	static-analysis:
+		name: backend:static-analysis
+		runs-on: ubuntu-latest
+		needs: install-deps
+		steps:
+			- name: Checkout
+				uses: actions/checkout@v4
 
-      - name: Run phpunit
-        run: |
-          if [ -f vendor/bin/phpunit ]; then
-            vendor/bin/phpunit || true
-          else
-            # fallback to global phpunit if installed in runner
-            phpunit || true
-          fi
+			- name: Try PHPStan (if available)
+				run: |
+					if [ -f vendor/bin/phpstan ]; then
+						vendor/bin/phpstan analyse || true
+					else
+						echo "phpstan not installed; skipping static analysis"
+					fi
 
-  static-analysis:
-    name: backend:static-analysis
-    runs-on: ubuntu-latest
-    needs: install-deps
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v4
-        with:
-          php-version: '8.1'
-
-      - name: PHP lint (basic)
-        run: |
-          # Basic syntax check across PHP files to provide a lightweight status check
-          find . -name "*.php" -not -path "./vendor/*" -print0 | xargs -0 -n1 -P4 php -l || true
