--- a/frontend/.github/workflows/ci.yml
+++ b/frontend/.github/workflows/ci.yml
@@ -1,81 +1,105 @@
+(# Frontend CI for target repo - runs install, lint, build and unit tests)
 name: Frontend CI
 
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+	push:
+		branches: [ main ]
+	pull_request:
+		branches: [ main ]
 
 jobs:
-  install-deps:
-    name: frontend:install-deps
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+	install-deps:
+		name: frontend:install-deps
+		runs-on: ubuntu-latest
+		steps:
+			- name: Checkout
+				uses: actions/checkout@v4
 
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
+			- name: Setup Node
+				uses: actions/setup-node@v4
+				with:
+					node-version: '18'
 
-      - name: Enable corepack
-        run: |
-          corepack enable || true
-          corepack prepare pnpm@latest --activate || true
+			- name: Enable pnpm via corepack
+				run: |
+					corepack enable || true
+					corepack prepare pnpm@latest --activate || true
 
-      - name: Cache pnpm store
-        uses: actions/cache@v4
-        with:
-          path: ~/.pnpm-store
-          key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
+			- name: Install dependencies
+				run: |
+					pnpm install --frozen-lockfile
 
-      - name: Install dependencies
-        run: |
-          pnpm install --frozen-lockfile
+	lint:
+		name: frontend:lint
+		runs-on: ubuntu-latest
+		needs: install-deps
+		steps:
+			- name: Checkout
+				uses: actions/checkout@v4
 
-  build:
-    name: frontend:build
-    runs-on: ubuntu-latest
-    needs: install-deps
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+			- name: Setup Node
+				uses: actions/setup-node@v4
+				with:
+					node-version: '18'
 
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
+			- name: Enable pnpm
+				run: |
+					corepack enable || true
+					corepack prepare pnpm@latest --activate || true
 
-      - name: Enable corepack
-        run: |
-          corepack enable || true
-          corepack prepare pnpm@latest --activate || true
+			- name: Run lint
+				run: |
+					pnpm lint --reporter=github || true
 
-      - name: Build
-        run: |
-          pnpm install --frozen-lockfile
-          pnpm build
+	build:
+		name: frontend:build
+		runs-on: ubuntu-latest
+		needs: lint
+		steps:
+			- name: Checkout
+				uses: actions/checkout@v4
 
-  unit-tests:
-    name: frontend:unit-tests
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+			- name: Setup Node
+				uses: actions/setup-node@v4
+				with:
+					node-version: '18'
 
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
+			- name: Enable pnpm
+				run: |
+					corepack enable || true
+					corepack prepare pnpm@latest --activate || true
 
-      - name: Enable corepack
-        run: |
-          corepack enable || true
-          corepack prepare pnpm@latest --activate || true
+			- name: Install deps (build job)
+				run: |
+					pnpm install --frozen-lockfile
 
-      - name: Run unit tests
-        run: |
-          pnpm install --frozen-lockfile
-          pnpm test || true
+			- name: Run build
+				run: |
+					pnpm build
+
+	unit-tests:
+		name: frontend:unit-tests
+		runs-on: ubuntu-latest
+		needs: build
+		steps:
+			- name: Checkout
+				uses: actions/checkout@v4
+
+			- name: Setup Node
+				uses: actions/setup-node@v4
+				with:
+					node-version: '18'
+
+			- name: Enable pnpm
+				run: |
+					corepack enable || true
+					corepack prepare pnpm@latest --activate || true
+
+			- name: Install deps (test job)
+				run: |
+					pnpm install --frozen-lockfile
+
+			- name: Run unit tests
+				run: |
+					pnpm test -- --ci || true
+
